[package]
name = "tomo"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/dhth/tomo"
description = "tomo is a no-frills pomodoro progress indicator for tmux"
homepage = "https://github.com/dhth/tomo"
license = "MIT"
keywords = [
    "cli",
    "pomodoro",
    "time-tracking",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "docker-compose.yml",
]

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"

[[bin]]
name = "tomo"
path = "src/main.rs"
doc = false

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[dev-dependencies]
assert_cmd = "2.0.17"
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
