[package]
name = "tomo"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/dhth/tomo"
description = "tomo is a no-frills pomodoro progress indicator for tmux"
homepage = "https://github.com/dhth/tomo"
license = "MIT"
keywords = [
    "cli",
    "pomodoro",
    "time-tracking",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "docker-compose.yml",
]

[[bin]]
name = "tomo"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
dirs = "6.0.0"

[dev-dependencies]
insta = "1.43.2"
insta-cmd = "0.6.0"
tempfile = "3.22.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
